--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -1,3 +1,14 @@
+body{
+    background-image: url(../img/back-ground/fondo.jpg);
+    color: #141619;
+    
+}
+
+
+
+
+
+
 .slider{
     width: 75vw;
     height: auto;
