--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2412,7 +2412,7 @@ textarea.form-control-lg {
   -moz-appearance: none;
   appearance: none;
   -webkit-print-color-adjust: exact;
-  color-adjust: exact;
+  accent-color: exact;
 }
 .form-check-input[type=checkbox] {
   border-radius: 0.25em;
