--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -3,10 +3,70 @@ body{
     color: #141619;
     
 }
+/* Estos son los estilos de la barra de navegación */
+.navbar{
+  background-color: #1b1b1b;
+  border-bottom: 5px;
+  border-radius: 20;
+  margin: 0%;
+}
 
+#fondoNavbar{
+  background-color: #1b1b1b;
+}
 
+#navbarNavDropdown{
+  border-bottom: 10px;
+  border-color: #1b1b1b;
+  background-color: #1b1b1b;
+  justify-content: space-evenly;
+}
 
+#Botonbuscar{
+  margin: auto;
+  background-color: #1b1b1b;
+  outline: #ffffe5;
+  color: #ffffe5;
+}
 
+.btn-outline-success{
+  color: #ffffe5;
+  border-color: #ffffe5;
+}
+
+.container-fluid{
+  height: 100%;
+  background-color: #ffffe5;
+  padding: 0%;
+}
+
+.contenedor-flex{
+  width: 100%;
+  height: 500px;
+  background-color: rgb(31, 24, 18);
+  display: flex;
+  align-items: center;
+}
+
+.container-fluid{
+  width: 100%;
+  height: 100%;;
+}
+
+.dropdown-menu{
+  background: #1b1b1b;
+  border-radius: 0%;
+  color: rgb(0, 0, 0);
+  justify-content: left;
+  align-items: first baseline;
+  text-align: left;
+}
+
+.dropdown-item{
+  color: white;
+  justify-content: left;
+  align-items: first baseline;
+}
 
 
 .slider{
