--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../img/back-ground/fondo.jpg);
+    background-image: url(../img/back-ground/fondo.jpg) !important;
     color: #141619;
     
 }
@@ -9,7 +9,7 @@ body{
   border-bottom: 5px;
   border-radius: 20;
   margin: 0%;
-}
+} 
 
 #fondoNavbar{
   background-color: #1b1b1b;
@@ -22,13 +22,6 @@ body{
   justify-content: space-evenly;
 }
 
-#Botonbuscar{
-  margin: auto;
-  background-color: #1b1b1b;
-  outline: #ffffe5;
-  color: #ffffe5;
-}
-
 .btn-outline-success{
   color: #ffffe5;
   border-color: #ffffe5;
@@ -38,19 +31,6 @@ body{
   height: 100%;
   background-color: #ffffe5;
   padding: 0%;
-}
-
-.contenedor-flex{
-  width: 100%;
-  height: 500px;
-  background-color: rgb(31, 24, 18);
-  display: flex;
-  align-items: center;
-}
-
-.container-fluid{
-  width: 100%;
-  height: 100%;;
 }
 
 .dropdown-menu{
