--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -211,11 +211,17 @@ body{
   #QuienesSomos{
     align-items: center;
     background-color: #1b1b1b;
+    height: 100%
+  }
+
+  #contener{
+    margin: auto;
+    margin-top: 50px;
+    height: 2000;
   }
 
   #Contintro{
     background-color: #1b1b1b;
-    height: 500px;
     margin: auto;
     margin-top: 50px;
   }
@@ -228,7 +234,9 @@ body{
     text-align: center;
     padding: 12em 0;
     margin-top: 50px;
+    margin-bottom: 50px;
   }
+
   #cajaimg1 h1{
   color: aliceblue;
   font-size: 60px;
@@ -247,6 +255,7 @@ body{
     justify-items: center;
     margin-top: 50px;
     word-break: keep-all;
+    margin-bottom: 50px;
   }
 
   #cajap1 p{
@@ -261,20 +270,21 @@ body{
     padding-left: 30px;
     padding-right: 30px;
     word-wrap: break-word;
+    margin-bottom: 50px;
   }
 
   #Contorigen{
     background-color: #1b1b1b;
     height: 1000px;
     margin: auto;
-    margin-top: 50px;
+    margin-bottom: 50px;
   }
 
   #Cajaimg2{
     background-image: url(../img/QUIENES_SOMOS/im\ origen.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 800px;
+    height: 900px;
     text-align: center;
     padding: 12em 0;
     margin-top: 50px;
@@ -302,6 +312,8 @@ body{
     padding-left: 30px;
     padding-right: 30px;
     word-wrap: break-word;
+    margin-top: 20%;
+    margin-bottom: 20%;
   }
 
 
@@ -358,4 +370,60 @@ body{
   padding: 0.5cm;
 }
 
-  
+/* Footer*/
+
+#footer{
+  height: 100%;
+  background-color: #1b1b1b;
+}
+
+#logoenftr{
+  height: 400px;
+  background-image: url(../img/LOGOS/LOGO-TRANSPARENTE.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #1b1b1b;
+}
+
+#linksftr{
+  margin-top: 50px;
+  font-size: 20px;
+  background-color: #1b1b1b;
+}
+
+#linksftr a{
+  margin-left: 30px;
+}
+
+#RRSSftr{
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  background-color: #1b1b1b;
+}
+#RRSSftr a{
+  margin-top: 200px;
+  margin-left: 50px;
+  padding-top: 30px;
+  font-size: 30px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#brderechos{
+  background-color: #1b1b1b;
+  height: 20px;
+  color: aliceblue;
+  justify-items: center;
+  text-align: center;
+  font-size: 15px;
+}
+
+#contactanos{
+  color: aliceblue;
+  margin-top: 50px;
+  font-size: 20px;
+  background-color: #1b1b1b;
+}
