--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -202,7 +202,7 @@ body{
   
   .imgprovend{
     width: auto;
-    height: 300px;
+    height: 200px;
   
   }
 
@@ -366,8 +366,14 @@ body{
 }
 
 .divfondo2{
-  background-color: green;
+  background-color: rgba(133, 197, 31, 0.815);
   padding: 0.5cm;
+}
+
+.divfondo3{
+  background-color: rgba(26, 41, 2, 0.699);
+  padding: 0.5cm;
+  color: whitesmoke;
 }
 
 /* Footer*/
