Cambio de márgenes
Cambio en unos márgenes para mejor estética

--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -381,6 +381,7 @@ body{
     font-size: 25px;
     font-family: fantasy;
     margin: auto;
+    margin-top: 80px;
     text-shadow: 2px  0px 0px black,
                  0px  2px 0px black,
                 -2px  0px 0px black,
