--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -76,7 +76,8 @@ body{
   }
   
   @keyframes scroll {
-  
+
+
     0% {
       -webkit-transform: translateX(0);
       transform: translateX(0);
@@ -629,4 +630,118 @@ body{
     outline:0;
     border: 1px solid #97d848;
   }
+
+
+
+
+
+
+
+
+
+  /* TIENDA GENERAL */
+
+.divtiendavertical{
+  background-color: #1b1b1b;
+  color: whitesmoke;
+  padding: 0.5cm;
+}
+
+.divtiendahorizontal{
+  color: whitesmoke;
+  text-align: justify;
+}
+
+.imgproductogeneral{
+  max-width: 120PX;
+  max-height: 200px;
+
+}
+
+.divcard1{
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.637);
+  padding: 0.1cm;
+}
+
+
+
+
+
+/* Estilo de la imagen */
+
+/* Estilo de la tabla de datos */
+#tabla-datos {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#tabla-datos table {
+  max-width: 80%;
+  max-height: 80%;
+  margin-top: 5%;
+  border-collapse: collapse;
+}
+
+#tabla-datos th, #tabla-datos td {
+  padding: 10px;
+  border: 1px solid white;
+  color: white;
+}
+
+/* Estilo del enlace de anclaje activo */
+#tabla-datos:target {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
+
+.h1tomas{
+  color: #141619;
+}
+
+.buttonTOMAS1{
+  height: auto; 
+  padding-left: 5px;
+  padding-right: 5px;   
+  margin-bottom: 20px; 
+  margin-top: 10px;   
+  text-transform: uppercase;
+  background-color: rgba(255, 0, 0, 0.747); 
+  border-color: transparent; 
+  border-style: solid; 
+  border-radius: 10px;  
+  width: auto;   
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  color: whitesmoke;
+  }
+
+  .buttonTOMAS2{
+    height: auto; 
+    padding-left: 5px;
+    padding-right: 5px;   
+    margin-bottom: 20px; 
+    margin-top: 10px;   
+    text-transform: uppercase;
+    background-color: yellow; 
+    border-color: transparent; 
+    border-style: solid; 
+    border-radius: 10px;  
+    width: auto;   
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    color: #141619;
+    }
+
   
