--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -469,6 +469,7 @@ body{
   }
 
   #contform{
+    color: aliceblue;
     justify-content: center;
     align-items: center;
     padding: 5%;
@@ -484,6 +485,7 @@ body{
   #contenedorformulario{
     width: 90%;
     height: 90%;
+    color: aliceblue;
    } 
 
   .contact_form{  
@@ -493,6 +495,7 @@ body{
     padding-top: 30px;
     padding-bottom: 20px;  
     background-color: #1b1b1b; 
+    color: aliceblue;
     padding-left: 30px; 
     display: flex;
   }
@@ -500,6 +503,7 @@ body{
   
   input{
     background-color: #1b1b1b; 
+    color: #ffffe5;
     width: 408px; 
     height: 40px; 
     border-radius: 5px;  
@@ -514,6 +518,7 @@ body{
   
   textarea{
     background-color: #1b1b1b; 
+    color: #ffffe5;
     width: 405px; 
     height: 150px; 
     border-radius: 5px;  
@@ -554,14 +559,14 @@ body{
     margin: auto;
   }
 
-#Enviar p{
+  #Enviar p{
     justify-content: center;
     align-items: center;
     margin: auto;
 
 }
   
-  button{
+  #btn_enviar{
     height: 45px; 
     padding-left: 5px;
     padding-right: 5px;   
@@ -578,7 +583,7 @@ body{
     align-items: center;
   }
   
-  button p{
+  #btn_enviar p{
     color: black; 
     
   }
@@ -593,28 +598,6 @@ body{
     font-size: 13px;  
     color: #ffffe5;  
   }
-  
-  
-  h1{
-    font-size: 39px;  
-    text-align: letf; 
-    padding-bottom: 20px; 
-    color: #ffffe5;
-  }
-  
-  
-  h3{
-    font-size: 16px; 
-    padding-bottom: 30px;
-    color: #ffffe5;   
-  }
-  
-  
-  p{
-    font-size: 14px; 
-    color: #ffffe5; 
-  }
-  
   
   ::-webkit-input-placeholder {
    color: #a8a8a8;
@@ -671,9 +654,6 @@ body{
 }
 
 
-
-
-
 /* Estilo de la imagen */
 
 /* Estilo de la tabla de datos */
@@ -710,11 +690,11 @@ body{
 }
   
 
-.h1tomas{
+#h1tomas{
   color: #141619;
 }
 
-.buttonTOMAS1{
+#buttonTOMAS1{
   height: auto; 
   padding-left: 5px;
   padding-right: 5px;   
@@ -732,7 +712,7 @@ body{
   color: whitesmoke;
   }
 
-  .buttonTOMAS2{
+  #buttonTOMAS2{
     height: auto; 
     padding-left: 5px;
     padding-right: 5px;   
@@ -753,7 +733,7 @@ body{
 
     /* PAGINA FITFORMULA ADULTO*/
 
-    .imgmenu1{
+    #imgmenu1{
      max-height: 200px;
      max-width: 150px;
 
