--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -467,7 +467,7 @@ body{
 /*-------------------------------------------------------------------------Contacto----------------------------------------------------------------------*/
 
   #CuerpFrom{
-    height: 1000px;
+    height: 100%;
     background-color: #1b1b1b;
     margin-top: 50px;
     margin-bottom: 50px;
