--- a/css/styles_cbs.css
+++ b/css/styles_cbs.css
@@ -804,3 +804,44 @@ body{
     margin-top: 30px;
     margin-left: 30px;
   }
+
+/*-----------------------------------------------------------------------PopUp-------------------------------------------------------------------------*/
+
+  #popup{
+    color: green;
+    display: none;
+    margin: auto;
+    position: absolute;
+    justify-content: center;
+    width: 100%;
+    z-index: 1001;
+    font-family: fantasy;
+    text-shadow: 1px  0px 0px black,
+                 0px  1px 0px black,
+                -1px  0px 0px black,
+                 0px -1px 0px black;
+  }
+
+  #cerrar{
+    background-color: #ffffe5; 
+    color: #141619; 
+    border-radius: 10px;
+    border: 0px;
+    margin-top: 20%;
+    margin-left: 80%;
+    cursor: pointer;
+  }
+
+  .content-pop{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    padding: 10px;
+    width: 400px;
+    min-width: 200px;
+    background-color: #141619;
+    border: 3px solid #ffffe5;
+    border-radius: 10px;
+    padding: 20px;
+  }
